# pavement_cracks

./: .gitignore  Dockerfile  README.md  dataset_custom.yaml  pyproject.toml  requirements.txt  train.py
app/: package-lock.json  package.json
app/server/: main.py  onnx.py
app/server/models/: detect.py
app/server/templates/: index.html
app/web/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  tsconfig.vitest.json  vite.config.ts
app/web/src/: App.vue  config.ts  main.ts
deployment/fast/: main.py
deployment/fast/templates/: index.html
deployment/fission/specs/: fission-deployment-config.yaml  function-cn-cracks.yaml  route-cn-cracks.yaml
deployment/traefik/production/: pavement-cracks.ingressroute.yaml
deployment/web/: pavement-cracks-nginx-configmap.yaml  pavement-cracks-web-deployment.yaml  pavement-cracks-web-hpa.yaml  pavement-cracks-web-service.yaml
model/: data.yaml  requirements.txt  train.py
model/general_detection/: Makefile  data.general_detection.yaml  detect.py  train.py
model/general_detection/exp/: args.yaml
model/general_detection/wandb/: latest-run
model/segmentation/: data.segmentation.yaml  train.py  yolov11-seg.yaml
model/segmentation/wandb/: latest-run
pavement_cracks/exp/: events.out.tfevents.1736913255.train-server-1.26642.0
runs/custom_logs/: events.out.tfevents.1736739143.train-server-1.8359.0  events.out.tfevents.1736739199.train-server-1.8811.0  events.out.tfevents.1736739295.train-server-1.9609.0  events.out.tfevents.1736813651.train-server-1.6524.0
(+86 files in other folders)
