[tool.poetry]
name = "pavement-cracks"
version = "0.1.0"
description = ""
authors = ["Sacha <sacha.smart@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
pydantic = "2.7.4"
ultralytics = "8.3.63"
fastapi = {extras = ["standard"], version = "^0.115.6"}
flask-pydantic-api = "^1.5.0"
uvicorn = "^0.34.0"
opencv-python = "4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
